--- a/Pagina Web/scr/mainViewMenu/index.html
+++ b/Pagina Web/scr/mainViewMenu/index.html
@@ -31,26 +31,13 @@
 	</section>
 
 	<div id="extraInformation_Container">
-		<div class="extraInformation">
-			<h4>Salario Bruto</h4>
-			<ul>
-				<li>Primer elemento</li>
-				<li>Segundo elemento</li>
-				<li>Tercero elemento</li>
-				<li>Cuarto elemento</li>
-			</ul>
+		<div class="extraInformation" id="deductionContainer">
+
 		</div>
-		<div class="extraInformation">
-			<h4>Deducciones</h4>
-			<ul>
-				<li>Primer elemento</li>
-				<li>Segundo elemento</li>
-				<li>Tercero elemento</li>
-				<li>Cuarto elemento</li>
-			</ul>
+		<div class="extraInformation" id="movementContainer">
+
 		</div>
 		<i class="material-icons close" onclick="closePopUp()">close</i>
-
 	</div>
 
 
